--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.4.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.6",
@@ -34,7 +35,8 @@
     },
     "autoload": {
         "psr-4": {
-            "SON\\": "app/"
+            "SON\\": "app/",
+            "SON\\Models\\": "SON/Models"
         },
         "classmap": [
             "database/seeds",
